# action-likelihood

./: README.md
action-likelihood/: CMakeLists.txt
action-likelihood/coppeliasim/: scene.ttt
action-likelihood/src/: main.cpp
